# Boss

./: .gitignore  AGENTS.md  BUILD_PLAN.txt  pyproject.toml  start-server.sh
.boss/: config.toml
BossApp/: Package.swift
BossApp/Sources/: APIClient.swift  BossApp.swift  ChatView.swift  ChatViewModel.swift  ComputerView.swift  ContentView.swift  DeployView.swift  DiagnosticsView.swift  LocalBackendBootstrapper.swift  MarkdownRenderer.swift  MemoryView.swift  Models.swift  PermissionPromptView.swift  PermissionsView.swift  PreviewView.swift  WorkersView.swift
BossApp/Tests/: ComputerConsoleTests.swift
boss/: __init__.py  agents.py  api.py  config.py  control.py  execution.py  main.py  models.py  observability.py  runtime.py  sdk_runtime.py  utils.py
boss/computer/: __init__.py  browser.py  capabilities.py  engine.py  state.py
boss/context/: __init__.py  manager.py
boss/deploy/: __init__.py  adapters.py  engine.py  state.py  static_adapter.py
boss/guardrails/: __init__.py  safety.py
boss/ios_delivery/: engine.py  runner.py  state.py  toolchain.py  upload.py
boss/loop/: engine.py  state.py
boss/mcp/: __init__.py  servers.py
docs/: local-development.md  memory-client-verification.md  memory-v2.md
scripts/: dev_doctor.py  smoke_local.py  task_branch.sh
tests/: __init__.py  test_action_tools.py  test_computer.py  test_computer_engine.py  test_computer_tools.py  test_deploy.py  test_integration_runtime.py  test_ios_delivery.py  test_preview.py  test_prompt_builder.py  test_providers.py  test_regression_harness.py  test_sdk_runtime.py  test_workers.py
(+38 files in other folders)
