[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "boss-assistant"
version = "0.1.0"
description = "Personal AI assistant for macOS built on the OpenAI Agents SDK"
readme = "BUILD_PLAN.txt"
requires-python = ">=3.12"
dependencies = [
  "openai-agents",
  "openai>=1.0.0",
  "pydantic>=2.0.0",
  "pyobjc-framework-EventKit",
  "rich",
  "prompt-toolkit",
]

[project.scripts]
boss = "boss.main:cli_main"

[tool.setuptools]
packages = ["boss", "boss.context", "boss.tools", "boss.mcp", "boss.guardrails", "boss.persistence"]